--- a/styles/style.css
+++ b/styles/style.css
@@ -181,7 +181,7 @@ sub, sup {
     color: #1a1a1a;
     cursor: pointer;
     font-family: 'monospace', sans-serif;
-    font-size: 2.5vh;
+    font-size: 1rem;
     font-weight: 600;
 }
 
